alignment problem fixed

--- a/src/Stylesheet/SearchbarBackground/_Background.scss
+++ b/src/Stylesheet/SearchbarBackground/_Background.scss
@@ -1,3 +1,8 @@
+
+*{
+    padding: 0;
+    margin: 0;
+}
 .Background{
     width: 100%;
     background: palevioletred;
@@ -14,8 +19,64 @@
  box-shadow: 2px;  
  border-radius: 7px; 
 }
+
 .GridView{
+    width: wrap;
+    height: 100%;
+    background: rgb(205, 233, 151);
     display: flex;
-    flex-direction: row;
+    justify-content:space-between;
+    align-content: center;
+    margin: 0;
+}
+.image-container {
+    height: 270px;
+    width: 200px;
+    display: inline-block;
+    background: tomato;
+    padding: 10px;
+    flex-direction: column;
+    text-align: center;
     justify-content: space-around;
+    margin-bottom: 17px;
+    
+}
+.flex-container{
+   
+   padding-left: 8%;
+   div{
+       display: inline-block;
+   }
+   
+}
+.Card{
+    max-width: 290px;
+    height: 500px;
+    margin: 1em;
+    
+}
+
+@media screen and (max-width:618px) {
+    .GridView{
+        width: wrap;
+        height: 100%;
+        background: rgb(205, 233, 151);
+        display: flex;
+        justify-content:space-between;
+        align-content: center;
+        
+        
+    }
+}
+
+@media screen and (max-width:600) {
+    .GridView{
+        width: wrap;
+        height: 100%;
+        background: rgb(205, 233, 151);
+        display: flex;
+        justify-content:space-between;
+        align-content: center;
+        
+    }
 }
